jsdialog: keep correct structure with hidden elements in grid
Don't show scrollbars for hidden content.
Affecting data -> Sort and data -> validity dialogs in calc

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -143,9 +143,17 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 }
 
 /* keep structure with hidden elements correct */
+.ui-grid {
+	/* don't show scroll for hidden objects */
+	overflow: hidden;
+}
+
 .ui-grid > .hidden {
 	visibility: hidden;
 	display: initial !important;
+	/* don't occupy space showing empty area */
+	width: 0px;
+	height: 0px;
 }
 
 /* vertical alignment in the grid */
